src/test/resources/semantic/custom/reject/elseStatementFloatType.ul
void main() {
}

void foo() {
    float condition;

    if (condition) {
    } else {
    }
}
